data/derived/comb/progs/unify/prog8750.ml.out
Characters 146-161:
  |Average (e1, e2) -> ((exprToString e1 +. exprToString e2)/2);;
                         ^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
